--- a/css/style.css
+++ b/css/style.css
@@ -15,25 +15,29 @@ body {
   position: relative;
 }
 #container img {
-  top: 0;
+  margin: 0;
   width: 98.9vw;
   height: 100vh;
   position: absolute;
   z-index: -1;
+  opacity: 0.7;
+  filter: saturate(150%);
 }
 
 .hero {
   max-width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0);
+  position: relative;
 }
 .hero .nav-bar {
-  max-width: 100%;
+  width: 100vw;
   height: 7%;
-  background-color: rgba(217, 255, 129, 0.201);
+  background-color: rgba(232, 255, 179, 0.221);
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: fixed;
 }
 .hero .nav-bar .nav-logo span {
   margin-left: 20px;
@@ -52,6 +56,13 @@ body {
   text-decoration: none;
   font-family: "Bruno Ace", cursive;
   font-size: 14px;
+  color: #000;
+  transition: all ease-in-out 0.5s;
+}
+.hero .nav-bar .nav-items ul li a:hover {
+  letter-spacing: 3px;
+  transition: all ease-in-out 0.5s;
+  color: rgb(188, 252, 154);
 }
 .hero .nav-bar .nav-links li {
   list-style: none;
@@ -62,6 +73,141 @@ body {
   text-decoration: none;
   font-family: "Bruno Ace", cursive;
   font-size: 14px;
+  transition: all ease-in-out 0.5s;
+  color: #000;
+}
+.hero .nav-bar .nav-links li a:hover {
+  letter-spacing: 3px;
+  transition: all ease-in-out 0.5s;
+  color: rgb(252, 226, 154);
+}
+.hero .nav-bar .hamburger-menu {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+.hero .nav-bar .line {
+  fill: none;
+  stroke: black;
+  stroke-width: 3;
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1), stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.hero .nav-bar .line1 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+.hero .nav-bar .line2 {
+  stroke-dasharray: 60 60;
+  stroke-width: 6;
+}
+.hero .nav-bar .line3 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+.hero .nav-bar .opened .line1 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
+.hero .nav-bar .opened .line2 {
+  stroke-dasharray: 1 60;
+  stroke-dashoffset: -30;
+  stroke-width: 6;
+}
+.hero .nav-bar .opened .line3 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
+
+.top-nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  color: #000000;
+  height: 50px;
+  padding: 1em;
+}
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.menu li {
+  list-style: none;
+}
+.menu li a {
+  text-decoration: none;
+  color: #fff;
+  font-family: "Bruno Ace", cursive;
+  font-size: 14px;
+  font-weight: 100;
+  transition: all ease-in-out 0.5s;
+}
+.menu li a:hover {
+  letter-spacing: 3px;
+  transition: all ease-in-out 0.5s;
+  color: rgb(154, 252, 191);
+}
+
+.menu > li {
+  margin: 0 1rem;
+  overflow: hidden;
+}
+
+.menu-button-container {
+  display: none;
+  height: 100%;
+  width: 30px;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#menu-toggle {
+  display: none;
+}
+
+.menu-button,
+.menu-button::before,
+.menu-button::after {
+  display: block;
+  background-color: #232020;
+  position: absolute;
+  height: 2px;
+  width: 30px;
+  transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  border-radius: 2px;
+}
+
+.menu-button::before {
+  content: "";
+  margin-top: -8px;
+}
+
+.menu-button::after {
+  content: "";
+  margin-top: 8px;
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::before {
+  margin-top: 0px;
+  transform: rotate(405deg);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button {
+  background: rgba(69, 67, 67, 0);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::after {
+  margin-top: 0px;
+  transform: rotate(-405deg);
 }
 
 .about {
