--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;600&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -300,6 +302,7 @@ body {
         border: 1px solid #ddda81;
         background-color: #ddda81;
         margin-right: 25px;
+        margin-left: 50px;
 
       }
     }
@@ -307,6 +310,12 @@ body {
     h1 {
       font-size: 48px;
       color: #fff;
+      font-family: 'Poppins', sans-serif;
+       span{
+        -webkit-text-fill-color: #ffffff00;
+          -webkit-text-stroke: 1px #fff;
+          font-family: 'Poppins', sans-serif;
+       }
     }
   }
 
