text stroke inhero page

--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,7 @@ body {
 }
 .hero-content .hero-text h1 {
   font-size: 48px;
-  color: #fff;
+  color: #eff3e8;
   font-family: "Poppins", sans-serif;
 }
 .hero-content .hero-text h1 span {
