--- a/css/style.scss
+++ b/css/style.scss
@@ -309,7 +309,7 @@ body {
 
     h1 {
       font-size: 48px;
-      color: #fff;
+      color: #eff3e8;
       font-family: 'Poppins', sans-serif;
        span{
         -webkit-text-fill-color: #ffffff00;
